// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card is rendered 1`] = `
.emotion-0 {
  padding-left: 1.5rem;
  text-indent: -1.5rem;
}

.emotion-1 {
  margin-top: 1rem;
}

<div
  class="card"
>
  <a
    href="https://example.com"
    rel="nofollow"
  >
    <img
      width="100%"
      src="https://url_to_img"
      alt="Little Big Burger"
      class="card-img-top"
    />
  </a>
  <div
    class="card-body"
  >
    <h5
      class="card-title"
    >
      <a
        href="https://example.com"
        rel="nofollow"
      >
        Little Big Burger
      </a>
    </h5>
    <h6
      class="card-subtitle"
    >
      100.00
    </h6>
    <div
      class="emotion-1 card-text"
    >
      <div
        class="emotion-0"
      >
        <span
          role="img"
          aria-label="round pushpin"
        >
          📍
        </span>
        <a
          href="https://url_to_map"
        >
          123 Main Street
        </a>
      </div>
    </div>
    <div
      class="card-text"
    >
      <div>
        <span
          role="img"
          aria-label="phone receiver"
        >
          📞
        </span>
        <a
          href="tel:503-543-2345"
        >
          503-543-2345
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card w/o phone is rendered 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -48,25 +48,7 @@
          >
            123 Main Street
          </a>
        </div>
      </div>
-     <div
-       class=\\"card-text\\"
-     >
-       <div>
-         <span
-           aria-label=\\"phone receiver\\"
-           role=\\"img\\"
-         >
-           📞
-         </span>
-          
-         <a
-           href=\\"tel:503-543-2345\\"
-         >
-           503-543-2345
-         </a>
    </div>
  </div>
-   </div>
- </div>"
`;

exports[`Card w/o price and phone is rendered 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -23,15 +23,10 @@
          rel=\\"nofollow\\"
        >
          Little Big Burger
        </a>
      </h5>
-     <h6
-       class=\\"card-subtitle\\"
-     >
-       100.00
-     </h6>
      <div
        class=\\"css-1b2x0kn card-text\\"
      >
        <div
          class=\\"css-vb40eg\\"
@@ -48,25 +43,7 @@
          >
            123 Main Street
          </a>
        </div>
      </div>
-     <div
-       class=\\"card-text\\"
-     >
-       <div>
-         <span
-           aria-label=\\"phone receiver\\"
-           role=\\"img\\"
-         >
-           📞
-         </span>
-          
-         <a
-           href=\\"tel:503-543-2345\\"
-         >
-           503-543-2345
-         </a>
    </div>
  </div>
-   </div>
- </div>"
`;

exports[`Card w/o price is rendered 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -23,15 +23,10 @@
          rel=\\"nofollow\\"
        >
          Little Big Burger
        </a>
      </h5>
-     <h6
-       class=\\"card-subtitle\\"
-     >
-       100.00
-     </h6>
      <div
        class=\\"css-1b2x0kn card-text\\"
      >
        <div
          class=\\"css-vb40eg\\""
`;
